feat(replay): Add Mask and Unmask Android implementation (#4265)